add request for getting devices
Adding new URL for fetching serial number of
all available devices.
